--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,9 +5,58 @@
 html{
     font-size: 10px;
     background-color: #FFF3F4;
+    
     body{
         padding: 0;
         margin: 0;
     }
 }
 
+.content{
+
+    display: block;
+    padding: 0 14rem 0 14rem;
+    .header{
+        display: flex;
+        font-size: 2rem;
+        padding: 0;
+        margin: 0;
+
+        .home{
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+    
+        }
+
+        .menu{
+            display: flex;
+            justify-content: right;
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+    
+            .menu-element{
+                padding: 1rem;
+                padding: 0;
+                margin: 0;
+        
+            }
+        }
+    }
+
+    .about{
+        font-size: 2rem;
+        display: flex;
+        justify-content: center;
+        img{
+            height: 37.6rem;
+            width: 33.6rem;
+        }
+        .bio{
+            
+        }
+    }
+}
