--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,8 +23,7 @@ html body {
   display: -ms-flexbox;
   display: flex;
   font-size: 2rem;
-  padding: 0;
-  margin: 0;
+  margin: 4.8rem 0 0 0;
 }
 
 .content .header .home {
@@ -37,8 +36,6 @@ html body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0;
-  margin: 0;
 }
 
 .content .header .menu {
@@ -67,6 +64,7 @@ html body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 20.8rem 0 0 0;
 }
 
 .content .about img {
