--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,6 +18,8 @@ html{
     padding: 0 14rem 0 14rem;
     .header{
         display: flex;
+        justify-content: space-between;
+
         font-size: 2rem;
         margin: 4.8rem 0 0 0;    
 
@@ -29,15 +31,20 @@ html{
 
         .menu{
             display: flex;
-            justify-content: right;
             list-style-type: none;
             padding: 0;
             margin: 0;
     
             .menu-element{
                 padding: 1rem;
-                padding: 0;
+                padding: 0 1rem 0 0;
                 margin: 0;
+                font-weight: bold;
+                color: black;
+            }
+            .menu-element:hover{
+                cursor: pointer;
+                text-decoration: overline #138240;
             }
         }
     }
@@ -48,11 +55,41 @@ html{
         justify-content: center;
         margin: 20.8rem 0 0 0;
         img{
+            background-size: cover;
             height: 37.6rem;
             width: 33.6rem;
         }
         .bio{
-            
+            margin-left: 5.6rem;
+            .text{
+                font-size: 2rem;
+                color: #161616;
+                text-align: left;
+            }
         }
     }
+
+    .links{
+        margin-top: 14.4rem;
+        hr{
+            width: 32.8rem;
+            color: #138240;
+        }
+        .social{
+            display: flex;
+            justify-content: center;
+            font-size: 2rem;
+            list-style-type: none;
+        }
+        .social-element{
+            padding-left: 1rem;
+        }
+    }
+
+}
+
+
+//Utilities
+.remove-hyperlink-decoration{
+    text-decoration: none;
 }
